--- a/src/data/blog/next-js-on-azure/next-js-on-azure-swa.mdx
+++ b/src/data/blog/next-js-on-azure/next-js-on-azure-swa.mdx
@@ -34,7 +34,7 @@ Applied to our scenario, the steps translate as follows:
 we export as a static site. This step includes linting and type-checking.
 2. Run integration tests: For demo purposes we have some (very) basic Jest integration tests.
 3. Provision Staging Environment: An Azure Static Web App comes with environments built-in, so this and step 5 are replaced with 
-a generic step **base_infra** step that runs before the application build. This applies the Bicep Infrastructure as Code files 
+a generic **base_infra** step that runs before the application build. This applies the Bicep Infrastructure as Code files 
 based on the environment variables in GitHub.
 4. Deploy to Staging Environment: We deploy the build to a staging environment using the official [GitHub Action](https://github.com/Azure/static-web-apps-deploy?tab=readme-ov-file) for static web apps.
 This uses the [Oryx](https://github.com/microsoft/Oryx) build system which downloads a docker container to wrap CLI logic we would otherise implement manually. 
@@ -45,6 +45,159 @@ Here we want to perform e2e tests in an environment as similar as possible to pr
 
 #### YAML
 Here is an example [yaml](https://github.com/canary-ops/blog/blob/main/.github/workflows/swa-main.yml) based on the main workflow for this blog.
+
+```yml:swa-main.yml
+name: Build and Push to Static Web App
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  changes:
+    runs-on: ubuntu-latest
+    outputs:
+      infra: ${{ steps.filter.outputs.infra }}
+      src: ${{ steps.filter.outputs.src }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            infra:
+               - 'infra/**'
+            src:
+               - 'src/**'
+
+  deploy_base_infra:
+    needs: changes
+    if: ${{ needs.changes.outputs.infra == 'true' || needs.changes.outputs.src == 'true' }}
+    secrets: inherit
+    uses: ./.github/workflows/base_infra_swa.yml
+
+  build_job:
+    needs: deploy_base_infra
+    if: ${{ needs.changes.outputs.src == 'true' }}
+    runs-on: ubuntu-latest
+    name: Build Job
+    env:
+      NEXT_UMAMI_ID: ${{ secrets.NEXT_UMAMI_ID }}
+      NEXT_PUBLIC_GISCUS_REPO: ${{ vars.NEXT_PUBLIC_GISCUS_REPO }}
+      NEXT_PUBLIC_GISCUS_REPOSITORY_ID: ${{ vars.NEXT_PUBLIC_GISCUS_REPOSITORY_ID }}
+      NEXT_PUBLIC_GISCUS_CATEGORY: ${{ vars.NEXT_PUBLIC_GISCUS_CATEGORY }}
+      NEXT_PUBLIC_GISCUS_CATEGORY_ID: ${{ vars.NEXT_PUBLIC_GISCUS_CATEGORY_ID }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: true
+          lfs: false
+
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20.x"
+          cache: "npm"
+          cache-dependency-path: "src/package-lock.json"
+
+      - name: run npm commands
+        working-directory: src
+        run: |
+          npm i --legacy-peer-deps
+          npm run build
+
+      - name: Upload build folder
+        uses: actions/upload-artifact@v4
+        with:
+          name: build
+          path: src/out
+
+  run_integration_tests:
+    needs: build_job
+    secrets: inherit
+    uses: ./.github/workflows/jest.yml
+
+  deploy_to_staging:
+    needs: run_integration_tests
+    runs-on: ubuntu-latest
+    name: Deploy to Staging
+    environment: staging
+    steps:
+      - name: Download build
+        uses: actions/download-artifact@v4
+        with:
+          name: build
+          path: build
+
+      - name: "Login to Azure"
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Get Deployment Token for Static Web App
+        uses: azure/CLI@v1
+        with:
+          inlineScript: |
+            APIKEY=$(az staticwebapp secrets list --name ${{ vars.SWA_APP_NAME }} | jq -r '.properties.apiKey')
+            echo "STATIC_DEPLOYMENT_TOKEN=$APIKEY" >> $GITHUB_ENV
+
+      - name: Deploy to Staging
+        id: deploy_to_staging
+        uses: Azure/static-web-apps-deploy@v1
+        with:
+          azure_static_web_apps_api_token: ${{ env.STATIC_DEPLOYMENT_TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
+          action: "upload"
+          skip_app_build: true
+          deployment_environment: staging
+          app_location: "build"
+    outputs:
+      staging_url: ${{ steps.deploy_to_staging.outputs.static_web_app_url }}
+
+  run_e2e_tests_staging:
+    needs: deploy_to_staging
+    secrets: inherit
+    uses: ./.github/workflows/playwright.yml
+    with:
+      baseUrl: ${{ needs.deploy_to_staging.outputs.staging_url }}
+      useExternal: true
+
+  deploy_to_production:
+    runs-on: ubuntu-latest
+    needs: run_e2e_tests_staging
+    name: Deploy to Production
+    environment: production
+    steps:
+      - name: Download build
+        uses: actions/download-artifact@v4
+        with:
+          name: build
+          path: build
+
+      - name: "Login to Azure"
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Get Deployment Token for Static Web App
+        uses: azure/CLI@v1
+        with:
+          inlineScript: |
+            APIKEY=$(az staticwebapp secrets list --name ${{ vars.SWA_APP_NAME }} | jq -r '.properties.apiKey')
+            echo "STATIC_DEPLOYMENT_TOKEN=$APIKEY" >> $GITHUB_ENV
+
+      - name: Deploy to Prod
+        uses: Azure/static-web-apps-deploy@v1
+        with:
+          azure_static_web_apps_api_token: ${{ env.STATIC_DEPLOYMENT_TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
+          action: "upload"
+          skip_app_build: true
+          environment: production
+          app_location: "build"
+
+```
 
 ### PR Workflow
 ![Workflow Diagram](/static/images/swa_bpmn_pr.svg)
@@ -68,8 +221,137 @@ of changes that will be executed. We write this report to the PR in GitHub.
     4. We deploy to a Preview Environment with a URL specific to this PR. Similar to steps 4 and 6 in the main pipeline we 
     leverage the official [GitHub Action](https://github.com/Azure/static-web-apps-deploy?tab=readme-ov-file) for static web apps.
 
+*note: I suggest having physically separate yml files for main and PR workflows to minimize the amount
+of switching and filtering. In my experience this can lead to unreadable workflow files.
+
 #### YAML
 Here is an example [yaml](https://github.com/canary-ops/blog/blob/main/.github/workflows/swa-pr.yml) based on the PR workflow for this blog.
+
+```yml:swa-pr.yml
+name: Build and Push to Static Web App
+
+on:
+  pull_request:
+    types: [opened, synchronize, reopened, closed]
+    branches:
+      - main
+
+jobs:
+  validate_bicep:
+    secrets: inherit
+    uses: ./.github/workflows/bicep_what_if.yml
+    with:
+      bicepMainPath: "./infra/swa/main.bicep"
+      params: "appName=${{ vars.SWA_APP_NAME }}"
+      resourceGroup: ${{ vars.SWA_RG }}
+
+  build_job:
+    if: github.event_name == 'pull_request' && github.event.action != 'closed'
+    runs-on: ubuntu-latest
+    name: Build Job
+    env:
+      NEXT_UMAMI_ID: ${{ secrets.NEXT_UMAMI_ID }}
+      NEXT_PUBLIC_GISCUS_REPO: ${{ vars.NEXT_PUBLIC_GISCUS_REPO }}
+      NEXT_PUBLIC_GISCUS_REPOSITORY_ID: ${{ vars.NEXT_PUBLIC_GISCUS_REPOSITORY_ID }}
+      NEXT_PUBLIC_GISCUS_CATEGORY: ${{ vars.NEXT_PUBLIC_GISCUS_CATEGORY }}
+      NEXT_PUBLIC_GISCUS_CATEGORY_ID: ${{ vars.NEXT_PUBLIC_GISCUS_CATEGORY_ID }}
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: true
+          lfs: false
+
+      - name: "Only run if code (not infra) has changed"
+        uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            src:
+              - 'src/**'
+
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20.x"
+          cache: "npm"
+
+      - name: run npm commands
+        working-directory: src
+        run: |
+          npm i --legacy-peer-deps
+          npm run build
+
+      - name: Upload build folder
+        uses: actions/upload-artifact@v4
+        with:
+          name: build
+          path: src/out
+
+  run_integration_tests:
+    needs: build_job
+    secrets: inherit
+    uses: ./.github/workflows/jest.yml
+
+  deploy_to_preview:
+    if: github.event_name == 'pull_request' && github.event.action != 'closed'
+    runs-on: ubuntu-latest
+    needs: run_integration_tests
+    name: Deploy to Preview
+    steps:
+      - name: Download build
+        uses: actions/download-artifact@v4
+        with:
+          name: build
+          path: build
+
+      - name: "Login to Azure"
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Get Deployment Token for Static Web App
+        uses: azure/CLI@v1
+        with:
+          inlineScript: |
+            APIKEY=$(az staticwebapp secrets list --name ${{ secrets.SWA_APP_NAME }} | jq -r '.properties.apiKey')
+            echo "STATIC_DEPLOYMENT_TOKEN=$APIKEY" >> $GITHUB_ENV
+
+      - name: Deploy to Preview
+        uses: Azure/static-web-apps-deploy@v1
+        with:
+          azure_static_web_apps_api_token: ${{ env.STATIC_DEPLOYMENT_TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
+          action: "upload"
+          skip_app_build: true
+          app_location: "build"
+
+  close_pull_request_job:
+    if: github.event_name == 'pull_request' && github.event.action == 'closed'
+    runs-on: ubuntu-latest
+    name: Close Pull Request Job
+    steps:
+      - name: "Login to Azure"
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Get Deployment Token for Static Web App
+        uses: azure/CLI@v1
+        with:
+          inlineScript: |
+            resourceName=$(az resource list --resource-group $(resourceGroupName) --resource-type 'Microsoft.Web/staticSites' --query [].name --output tsv)
+            APIKEY=$(az staticwebapp secrets list --name $resourceName | jq -r '.properties.apiKey')
+            echo "STATIC_DEPLOYMENT_TOKEN=$APIKEY" >> $GITHUB_ENV
+
+      - name: Close Pull Request
+        id: closepullrequest
+        uses: Azure/static-web-apps-deploy@v1
+        with:
+          azure_static_web_apps_api_token: ${{ secrets.STATIC_DEPLOYMENT_TOKEN }}
+          action: "close"
+
+
+```
 
 ## Extensions
 
