--- a/src/data/blog/next-js-on-azure/next-js-on-azure-swa.mdx
+++ b/src/data/blog/next-js-on-azure/next-js-on-azure-swa.mdx
@@ -30,18 +30,19 @@ This is a simplified workflow to demonstrate they key stages involved in a typic
 
 Applied to our scenario, the steps translate as follows: 
 
-1. Execute Build: In the case of this example we use node to build our Next-JS site. As it's a simple blog so
+1. Validate Entry Criteria: We use a path filter to look for changes in the **src** or **infra** folders.
+2. Execute Build: In the case of this example we use node to build our Next-JS site. As it's a simple blog so
 we export as a static site. This step includes linting and type-checking.
-2. Run integration tests: For demo purposes we have some (very) basic Jest integration tests.
-3. Provision Staging Environment: An Azure Static Web App comes with environments built-in, so this and step 5 are replaced with 
+3. Run integration tests: For demo purposes we have some (very) basic Jest integration tests.
+4. Provision Staging Environment: An Azure Static Web App comes with environments built-in, so this and step 5 are replaced with 
 a generic **base_infra** step that runs before the application build. This applies the Bicep Infrastructure as Code files 
 based on the environment variables in GitHub.
-4. Deploy to Staging Environment: We deploy the build to a staging environment using the official [GitHub Action](https://github.com/Azure/static-web-apps-deploy?tab=readme-ov-file) for static web apps.
+5. Deploy to Staging Environment: We deploy the build to a staging environment using the official [GitHub Action](https://github.com/Azure/static-web-apps-deploy?tab=readme-ov-file) for static web apps.
 This uses the [Oryx](https://github.com/microsoft/Oryx) build system which downloads a docker container to wrap CLI logic we would otherise implement manually. 
 Here we want to perform e2e tests in an environment as similar as possible to production without affecting the live site.
-5. Run E2E Tests: We use (very) simple PlayWright tests as Browser-based UI testing. This includes Firefox, Chrome and WebKit.
-5. Provision Production Environment: See step 3.
-6. Deploy to Production: Repeat step 4 but targeting the production environment.
+6. Run E2E Tests: We use (very) simple PlayWright tests as Browser-based UI testing. This includes Firefox, Chrome and WebKit.
+7. Provision Production Environment: See step 4.
+8. Deploy to Production: Repeat step 5 but targeting the production environment.
 
 #### YAML
 Here is an example [yaml](https://github.com/canary-ops/blog/blob/main/.github/workflows/swa-main.yml) based on the main workflow for this blog.
@@ -55,7 +56,7 @@ on:
       - main
 
 jobs:
-  changes:
+  validate_entry:
     runs-on: ubuntu-latest
     outputs:
       infra: ${{ steps.filter.outputs.infra }}
@@ -72,14 +73,14 @@ jobs:
                - 'src/**'
 
   deploy_base_infra:
-    needs: changes
+    needs: validate_entry
     if: ${{ needs.changes.outputs.infra == 'true' || needs.changes.outputs.src == 'true' }}
     secrets: inherit
     uses: ./.github/workflows/base_infra_swa.yml
 
   build_job:
     needs: deploy_base_infra
-    if: ${{ needs.changes.outputs.src == 'true' }}
+    if: ${{ needs.validate_entry.outputs.src == 'true' }}
     runs-on: ubuntu-latest
     name: Build Job
     env:
@@ -228,7 +229,7 @@ of switching and filtering. In my experience this can lead to unreadable workflo
 Here is an example [yaml](https://github.com/canary-ops/blog/blob/main/.github/workflows/swa-pr.yml) based on the PR workflow for this blog.
 
 ```yml:swa-pr.yml
-name: Build and Push to Static Web App
+name: Build and Push to Static Web App (PR)
 
 on:
   pull_request:
@@ -237,8 +238,26 @@ on:
       - main
 
 jobs:
+  validate_entry:
+    runs-on: ubuntu-latest
+    outputs:
+      infra: ${{ steps.filter.outputs.infra }}
+      src: ${{ steps.filter.outputs.src }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            infra:
+               - 'infra/**'
+            src:
+               - 'src/**'
+
   validate_bicep:
     secrets: inherit
+    needs: validate_entry
+    if: needs.validate_entry.outputs.infra == 'true'
     uses: ./.github/workflows/bicep_what_if.yml
     with:
       bicepMainPath: "./infra/swa/main.bicep"
@@ -246,7 +265,7 @@ jobs:
       resourceGroup: ${{ vars.SWA_RG }}
 
   build_job:
-    if: github.event_name == 'pull_request' && github.event.action != 'closed'
+    if: github.event_name == 'pull_request' && github.event.action != 'closed' && needs.validate_entry.outputs.src == 'true'
     runs-on: ubuntu-latest
     name: Build Job
     env:
@@ -349,7 +368,6 @@ jobs:
         with:
           azure_static_web_apps_api_token: ${{ secrets.STATIC_DEPLOYMENT_TOKEN }}
           action: "close"
-
 
 ```
 
