Update Next-JS and SWA Article

--- a/src/data/blog/next-js-on-azure/next-js-on-azure-swa.mdx
+++ b/src/data/blog/next-js-on-azure/next-js-on-azure-swa.mdx
@@ -383,5 +383,6 @@ This is a simple example. This could be extended to include:
 - Manual Control for production deployment.
 - Progressive Rollout or Canary Deployments (Potentially use Traffic Splitting feature for this in Static Web Apps).
 - Expand PlayWright to test logic such as contact form submission.
+- Implement a shorter workflow for simple content updates (Potentially filter steps based on changes to the data folder)
 
 In the next article, we will look at implementing a similar workflow for Blob Storage Hosting.
