Update Next-JS and SWA Article

--- a/src/data/blog/next-js-on-azure/next-js-on-azure-swa.mdx
+++ b/src/data/blog/next-js-on-azure/next-js-on-azure-swa.mdx
@@ -3,7 +3,7 @@ title: Deploying Next-JS to Azure Static Web Apps using Bicep and GitHub Actions
 date: '2024-05-01'
 tags: ['next-js', 'azure', 'docker', 'static-web-apps', 'github-actions', 'bicep', 'bpmn']
 draft: false
-summary: Explaining how to deploy Next-JS to Static Web Apps using GitHub Actions
+summary: Overview of pipeline design for deploying Next-JS to Azure Static Web Apps using GitHub Actions
 ---
 
 ![Next-JS and SWA](/static/images/next_swa.png)
