--- a/src/data/blog/next-js-on-azure/next-js-on-azure-swa.mdx
+++ b/src/data/blog/next-js-on-azure/next-js-on-azure-swa.mdx
@@ -242,6 +242,7 @@ jobs:
     if: github.event_name == 'pull_request' && github.event.action != 'closed' && needs.validate_entry.outputs.src
     runs-on: ubuntu-latest
     name: Build Job
+    needs: validate_entry
     env:
       NEXT_UMAMI_ID: ${{ secrets.NEXT_UMAMI_ID }}
       NEXT_PUBLIC_GISCUS_REPO: ${{ vars.NEXT_PUBLIC_GISCUS_REPO }}
@@ -267,6 +268,7 @@ jobs:
         with:
           node-version: "20.x"
           cache: "npm"
+          cache-dependency-path: "src/package-lock.json"
 
       - name: run npm commands
         working-directory: src
@@ -342,6 +344,7 @@ jobs:
         with:
           azure_static_web_apps_api_token: ${{ secrets.STATIC_DEPLOYMENT_TOKEN }}
           action: "close"
+
 
 ```
 
