--- a/src/data/blog/next-js-on-azure/next-js-on-azure-swa.mdx
+++ b/src/data/blog/next-js-on-azure/next-js-on-azure-swa.mdx
@@ -308,7 +308,7 @@ jobs:
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            APIKEY=$(az staticwebapp secrets list --name ${{ secrets.SWA_APP_NAME }} | jq -r '.properties.apiKey')
+            APIKEY=$(az staticwebapp secrets list --name ${{ vars.SWA_APP_NAME }} | jq -r '.properties.apiKey')
             echo "STATIC_DEPLOYMENT_TOKEN=$APIKEY" >> $GITHUB_ENV
 
       - name: Deploy to Preview
@@ -342,9 +342,8 @@ jobs:
         id: closepullrequest
         uses: Azure/static-web-apps-deploy@v1
         with:
-          azure_static_web_apps_api_token: ${{ secrets.STATIC_DEPLOYMENT_TOKEN }}
+          azure_static_web_apps_api_token: ${{ env.STATIC_DEPLOYMENT_TOKEN }}
           action: "close"
-
 
 ```
 
