new article on BNMP

--- a/src/data/blog/next-js-on-azure/next-js-on-azure-swa.mdx
+++ b/src/data/blog/next-js-on-azure/next-js-on-azure-swa.mdx
@@ -12,7 +12,7 @@ summary: Overview of pipeline design for deploying Next-JS to Azure Static Web A
 In the second part of this series, we will look at deploying Next-JS to 
 Azure Static Web Apps using GitHub Actions and Bicep.
 
-## Source Control Strategy
+## Source Control Branching Strategy
 
 For the purposes of this article and in general we use the [Feature-Branch workflow](https://www.atlassian.com/git/tutorials/comparing-workflows/feature-branch-workflow).
 This consists of a main branch and short-lived feature branches which are reviewed and merged using the Pull-Request mechanism.
