Add article on PR workflow

--- a/src/data/blog/github-actions-pipeline-design.mdx
+++ b/src/data/blog/github-actions-pipeline-design.mdx
@@ -1,5 +1,5 @@
 ---
-title: Designing DevOps Pipelines for a Feature-Branch Workflow
+title: Designing DevOps Pipelines for the Main Branch in a Feature-Branch Workflow
 date: '2024-01-13'
 tags: ['bnmp', 'devops', 'github-actions', 'infastructure-as-code', 'strategy']
 draft: false
@@ -82,3 +82,5 @@ support this environment.
 We deploy the same build artifact as we deployed to test. 
 This step may also define a progressive rollout strategy such as Red/Green or Canary Deployments. 
 We might also run smoke tests at this stage. 
+
+In the next article we will look at the PR worflow.
