--- a/src/data/blog/static-sites-cloudflare/static-sites-cloudflare-pages.mdx
+++ b/src/data/blog/static-sites-cloudflare/static-sites-cloudflare-pages.mdx
@@ -9,6 +9,8 @@ summary: Overview of pipeline design for deploying static sites to Cloudflare Pa
 ![CloudFlare Pages](/static/images/cloudflare.webp)
 
 This article will cover pipeline design for deploying a static site to CloudFlare Pages via GitHub Actions.
+similar to GitHub pages, Cloudflare offers a simple managed solution for deploying static sites. It's a very cheap
+option, even having a free tier that works for personal sites.
 
 ## Source Control Branching Strategy
 
@@ -23,23 +25,18 @@ Firstly we will look at the workflow triggered when code is pushed, or a PR is m
 ### Main Branch Workflow
 ![Workflow Diagram](/static/images/swa_bpmn_main.svg)
 
-This is a simplified workflow to demonstrate they key stages involved in a typical CI/CD process. 
+This is a workflow without baseline Infrastructure as Code, because CloudFlare handle base infrastructure for us.
 
 Applied to our scenario, the steps translate as follows: 
 
 1. Validate Entry Criteria: We use a path filter to look for changes in the **src** folder.
-2. Provision Base Infrastructure: In our example there is no base infrastructure. All you need is a cloudflare account and project.
-  Cloudflare Account ID and API Token need to be setup as environment variables in GitHub.
-3. Execute Build: We build and export as a static site. This step includes linting and type-checking.
-4. Run integration tests: For demo purposes we have some (very) basic Jest integration tests.
-5. Provision Staging Environment: Cloudflare pages comes with environments built-in, so this and step 8 are handled
-by the following deployment step which sets up an environment.
-6. Deploy to Staging Environment: We deploy the build to a staging environment using the official [GitHub Action](https://github.com/cloudflare/pages-action) for Cloudflare Pages.
+2. Execute Build: We build and export as a static site. This step includes linting and type-checking.
+3. Run integration tests: For demo purposes we have some (very) basic Jest integration tests.
+4. Deploy to Staging Environment: We deploy the build to a staging environment using the official [GitHub Action](https://github.com/cloudflare/pages-action) for Cloudflare Pages.
 Here we want to perform e2e tests in an environment as similar as possible to production without affecting the live site. We use the concept of branches within 
-cloudflare to target a staging environment. The step returns the url as an output.
-7. Run E2E Tests: We use (very) simple PlayWright tests as Browser-based UI testing. This includes Firefox, Chrome and WebKit.
-8. Provision Production Environment: See step 5.
-9. Deploy to Production: Repeat step 6 but targeting the production environment. Specifying the main branch within Cloudflare ensures we
+cloudflare to target a named staging environment. The step returns the url as an output.
+5. Run E2E Tests: We use (very) simple PlayWright tests as Browser-based UI testing. This includes Firefox, Chrome and WebKit.
+6. Deploy to Production: Repeat step 4 but targeting production. Specifying the main branch within Cloudflare ensures we
 deploy to the production environment.
 
 #### YAML
@@ -171,20 +168,16 @@ jobs:
 ![Workflow Diagram](/static/images/swa_bpmn_pr.svg)
 
 For a PR, we want a simplified workflow that won't affect production but providers testers or developers
-a dedicated environment to review the PR. We also want to validate and assess any changes to Bicep code. One 
-limitation of using a static web app environments is that you can't easily review Bicep changes 
-without affecting the production site. So we settle for a **what-if** deployment and validation 
-as the basis for PR approval.
+a dedicated environment to review the PR.
 
 Applied to our scenario, the steps translate as follows: 
 
   1. Validate Entry Criteria: We check if source control changes are included in the PR.
-  2. If the PR includes source changes, we execute the build: Similarly to the main pipeline we use node to build and export our Next-JS site. This includes linting and
+  2. If the PR includes source changes, we execute the build: Similar to the main pipeline we use node to build and export our Next-JS site. This includes linting and
 type checking.
   3. Run Integration Tests: We run our Jest tests.
-  4. Provision Preview Environment: This functionality is again, built in to CloudFlare pages. When we execute the following steps
-the [CloudFlare GitHub Action](https://github.com/cloudflare/pages-action) tool will handle provisioning an environment based on the PR name. 
-  5. We deploy to a Preview Environment with a URL specific to this PR.
+  4. We deploy to a Preview Environment with a URL specific to this PR. Provision Preview Environment: This functionality is again, built in to CloudFlare pages. When we execute
+the [CloudFlare GitHub Action](https://github.com/cloudflare/pages-action) action will handle provisioning an environment based on the PR name. 
 
 *note: I suggest having physically separate yml files for main and PR workflows to minimize the amount
 of switching and filtering. In my experience this can lead to unreadable workflow files.
@@ -291,12 +284,8 @@ jobs:
 This is a simple example. This could be extended to include:
 
 - Cleanup Preview Environments after PRs are merged.
-- Static Code Analysis steps.
 - Unit Tests.
 - Smoke Tests after a Production Deployment.
-- Load Tests.
-- Penetration Tests.
-- Infrastructure Validation after a deployment.
 - Manual Control for production deployment.
 - Progressive Rollout or Canary Deployments (Potentially use Traffic Splitting feature for this in Static Web Apps).
 - Expand PlayWright to test logic such as contact form submission.
