--- a/src/data/blog/static-sites-cloudflare/static-sites-cloudflare-pages.mdx
+++ b/src/data/blog/static-sites-cloudflare/static-sites-cloudflare-pages.mdx
@@ -9,8 +9,8 @@ summary: Overview of pipeline design for deploying static sites to Cloudflare Pa
 ![CloudFlare Pages](/static/images/cloudflare.webp)
 
 This article will cover pipeline design for deploying a static site to CloudFlare Pages via GitHub Actions.
-similar to GitHub pages, Cloudflare offers a simple managed solution for deploying static sites. It's a very cheap
-option, even having a free tier that works for personal sites. CloudFlare does have it's own build system but
+Similar to GitHub pages, Cloudflare offers a simple managed solution for deploying static sites. It's a very cheap
+option, having a free tier suitable for personal sites. CloudFlare does have it's own build system but
 we prefer integrating with GitHub Actions for visibility and standardisation purposes across projects.
 
 ## Source Control Branching Strategy
