update cloudflare article

--- a/src/data/blog/static-sites-cloudflare/static-sites-cloudflare-pages.mdx
+++ b/src/data/blog/static-sites-cloudflare/static-sites-cloudflare-pages.mdx
@@ -186,7 +186,7 @@ of switching and filtering. In my experience this can lead to unreadable workflo
 #### YAML
 Here is an example [yaml](https://github.com/canary-ops/blog/blob/main/.github/workflows/cloudflare-pr.yml) based on the PR workflow for this blog.
 
-```yml:swa-pr.yml
+```yml:cloudflare-pr.yml
 name: Build and Push to Cloudflare Pages (PR)
 
 on:
