--- a/src/data/blog/static-sites-cloudflare/static-sites-cloudflare-pages.mdx
+++ b/src/data/blog/static-sites-cloudflare/static-sites-cloudflare-pages.mdx
@@ -44,11 +44,9 @@ deploy to the production environment.
 Here is an example [yaml](https://github.com/canary-ops/blog/blob/main/.github/workflows/cloudflare-main.yml) based on the main workflow for this blog.
 
 ```yml:cloudflare-main.yml
-name: Build and Push to Cloudflare Pages (PR)
-
+name: Build and Push to Cloudflare Pages (Main)
 on:
-  pull_request:
-    types: [opened, synchronize, reopened, closed]
+  push:
     branches:
       - main
 
@@ -67,10 +65,10 @@ jobs:
                - 'src/**'
 
   build_job:
-    if: github.event_name == 'pull_request' && github.event.action != 'closed' && needs.validate_entry.outputs.src == 'true'
+    needs: validate_entry
+    if: needs.validate_entry.outputs.src == 'true'
     runs-on: ubuntu-latest
     name: Build Job
-    needs: validate_entry
     env:
       NEXT_UMAMI_ID: ${{ secrets.NEXT_UMAMI_ID }}
       NEXT_PUBLIC_GISCUS_REPO: ${{ vars.NEXT_PUBLIC_GISCUS_REPO }}
@@ -78,13 +76,13 @@ jobs:
       NEXT_PUBLIC_GISCUS_CATEGORY: ${{ vars.NEXT_PUBLIC_GISCUS_CATEGORY }}
       NEXT_PUBLIC_GISCUS_CATEGORY_ID: ${{ vars.NEXT_PUBLIC_GISCUS_CATEGORY_ID }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: true
           lfs: false
 
       - name: Use Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: "20.x"
           cache: "npm"
@@ -107,11 +105,48 @@ jobs:
     secrets: inherit
     uses: ./.github/workflows/jest.yml
 
-  deploy_to_preview:
-    if: github.event_name == 'pull_request' && github.event.action != 'closed'
-    runs-on: ubuntu-latest
+  deploy_to_staging:
     needs: run_integration_tests
-    name: Deploy to Preview
+    runs-on: ubuntu-latest
+    name: Deploy to Staging
+    environment: staging
+    steps:
+      - name: Download build
+        uses: actions/download-artifact@v4
+        with:
+          name: build
+          path: build
+
+      - name: Publish to Cloudflare Pages
+        uses: cloudflare/pages-action@v1
+        id: deploy_to_staging
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ vars.CLOUDFLARE_ACCOUNT_ID }}
+          projectName: ${{ vars.CLOUDFLARE_PROJECT_NAME }}
+          directory: build
+          # Optional: Enable this if you want to have GitHub Deployments triggered
+          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+          # Optional: Switch what branch you are publishing to.
+          # By default this will be the branch which triggered this workflow
+          branch: staging
+
+    outputs:
+      staging_url: ${{ steps.deploy_to_staging.outputs.url }}
+
+  run_e2e_tests_staging:
+    needs: deploy_to_staging
+    secrets: inherit
+    uses: ./.github/workflows/playwright.yml
+    with:
+      baseUrl: ${{ needs.deploy_to_staging.outputs.staging_url }}
+      useExternal: true
+
+  deploy_to_production:
+    runs-on: ubuntu-latest
+    needs: run_e2e_tests_staging
+    name: Deploy to Production
+    environment: production
     steps:
       - name: Download build
         uses: actions/download-artifact@v4
@@ -127,7 +162,7 @@ jobs:
           projectName: ${{ vars.CLOUDFLARE_PROJECT_NAME }}
           directory: build
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
-
+          branch: main
 ```
 
 ### PR Workflow
